# django_task_mon

./: README.md  manage.py  pyproject.toml
task_man/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: forms.py  models.py  services.py  tests.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html  index.html
users/: views.py
